@@ -17,6 +17,28 @@ package|;
 end_package
 
 begin_import
+import|import static
+name|org
+operator|.
+name|junit
+operator|.
+name|Assert
+operator|.
+name|fail
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
 import|import
 name|org
 operator|.
@@ -27,6 +49,20 @@ operator|.
 name|conf
 operator|.
 name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FSDataOutputStream
 import|;
 end_import
 
@@ -368,6 +404,84 @@ name|fc
 index|[
 name|i
 index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testGetFileChecksumForBlocksUnderConstruction ()
+specifier|public
+name|void
+name|testGetFileChecksumForBlocksUnderConstruction
+parameter_list|()
+block|{
+try|try
+block|{
+name|FSDataOutputStream
+name|file
+init|=
+name|dfs
+operator|.
+name|create
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+literal|"/testFile"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|file
+operator|.
+name|write
+argument_list|(
+literal|"Performance Testing"
+operator|.
+name|getBytes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|dfs
+operator|.
+name|getFileChecksum
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+literal|"/testFile"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"getFileChecksum should fail for files "
+operator|+
+literal|"with blocks under construction"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ie
+parameter_list|)
+block|{
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|ie
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"Fail to get checksum, since file /testFile "
+operator|+
+literal|"is under construction."
 argument_list|)
 argument_list|)
 expr_stmt|;
